api: enroll, start shift, end shift, nurses - api only functions don't work yet.
